--- a/src/app/components/content-management/content-management.component.html
+++ b/src/app/components/content-management/content-management.component.html
@@ -1,3 +1,56 @@
-<p>
-  content-management works!
-</p>
+<div class="container-scroller">
+  <!-- partial:partials/_navbar.html -->
+
+  <logo-nav></logo-nav>
+  <!-- partial -->
+  <div class="container-fluid page-body-wrapper">
+    <div class="row row-offcanvas row-offcanvas-right">
+      <!-- partial:partials/_settings-panel.html -->
+      <header-nav></header-nav>
+      <profile-nav></profile-nav>
+      <!-- partial -->
+      <!-- partial:partials/_sidebar.html -->
+
+      <!-- partial -->
+      <div class="content-wrapper">
+        <div class="card">
+          <div class="card-body">
+            <!-- <a href="" id="show" class="btn  btn-maron" style="float: right">Export To Excel</a> -->
+            <!-- <a routerLink="/addDelivery" id="show" class="btn  btn-maron" style="float: right">Add Delivery
+              Boy</a> -->
+            <h4 class="card-title">
+              Content Management </h4>
+            <br />
+            <div class="row">
+              <div class="col-12">
+                <div class="table-responsive">
+                  <ul>
+                    <li>Terms and Conditions &nbsp; ></li>
+                    <li>Privacy Policy &nbsp; ></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+      <!-- content-wrapper ends -->
+      <!-- partial:partials/_footer.html -->
+      <footer class="footer">
+        <div class="container-fluid clearfix">
+          <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018
+            <a routerLink="#">Dhukan </a>. All rights reserved. </span>
+          <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">
+
+          </span>
+        </div>
+      </footer>
+      <!-- partial -->
+    </div>
+    <!-- row-offcanvas ends -->
+  </div>
+  <!-- page-body-wrapper ends -->
+</div>
