--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -57,7 +57,7 @@
             </a>
         </li>
         <li class="nav-item" [ngClass]="{'active':pageNav==='content' || pageNav==='addcontent'}">
-            <a class="nav-link" routerLink="/content-management">
+            <a class="nav-link" routerLink="/addcontent">
                 <i class="fa fa-file-text"></i>
                 <span class="menu-title">Content Management</span>
             </a>
