--- a/src/app/components/sidenav/profile.nav.css
+++ b/src/app/components/sidenav/profile.nav.css
@@ -1,4 +1,4 @@
-.fa-product-hunt,.fa-cog,.fa-bug,.fa-caret-square-o-right,.fa-cart-arrow-down,.fa-file-text{
+.fa-product-hunt,.fa-cog,.fa-bug,.fa-caret-square-o-right,.fa-cart-arrow-down,.fa-file-text,.fa-picture-o{
     padding-right: 20px;
     font-size: 17px;
 }
