--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -44,6 +44,12 @@
                 <span class="menu-title">Products </span>
             </a>
         </li>
+        <li class="nav-item" [ngClass]="{'active':pageNav==='banners' || pageNav==='addbanners'}">
+            <a class="nav-link" routerLink="/banner">
+                <i class="fa fa-picture-o" aria-hidden="true"></i>
+                <span class="menu-title">Banners</span>
+            </a>
+        </li>
         <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
             <a class="nav-link" routerLink="/offers">
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
