--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -44,7 +44,7 @@
                 <span class="menu-title">Products </span>
             </a>
         </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='banners' || pageNav==='addbanners'}">
+        <li class="nav-item" [ngClass]="{'active':pageNav==='banner' || pageNav==='addbanner'}">
             <a class="nav-link" routerLink="/banner">
                 <i class="fa fa-picture-o" aria-hidden="true"></i>
                 <span class="menu-title">Banners</span>
