--- a/src/app/components/banner/add.banner.html
+++ b/src/app/components/banner/add.banner.html
@@ -37,10 +37,12 @@
                                                 <img src="{{image1}}" alt="" width="200" height="200">
                                             </div>
                                         </div>
-                                        <button type="submit" class="btn btn-primary vendor-button" *ngIf="!offerId" (click)="addOffer()">
+                                        <button type="submit" class="btn btn-primary vendor-button" *ngIf="!offerId"
+                                            (click)="addOffer()">
                                             Add Banner
                                         </button>
-                                        <button type="submit" class="btn btn-primary vendor-button" *ngIf="offerId" (click)="updateOfferById()">
+                                        <button type="submit" class="btn btn-primary vendor-button" *ngIf="offerId"
+                                            (click)="updateOfferById()">
                                             Update Coupon
                                         </button>
                                     </fieldset>
