--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -44,10 +44,16 @@
                 <span class="menu-title">Products </span>
             </a>
         </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='banners' || pageNav==='addbanners'}">
+        <li class="nav-item" [ngClass]="{'active':pageNav==='banner' || pageNav==='addbanner'}">
             <a class="nav-link" routerLink="/banner">
                 <i class="fa fa-picture-o" aria-hidden="true"></i>
                 <span class="menu-title">Banners</span>
+            </a>
+        </li>
+        <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
+            <a class="nav-link" routerLink="/location">
+                <i class="fa fa-map-marker"></i>
+                <span class="menu-title">Location Management</span>
             </a>
         </li>
         <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
