--- a/src/app/components/products/add.product.html
+++ b/src/app/components/products/add.product.html
@@ -105,7 +105,7 @@
                                         <div class="form-group" *ngIf="percentage">
                                             <label for="exampleInputEmail1">Discount Percentage</label>
                                             <input type="email" class="form-control" id="exampleInputEmail1"
-                                                aria-describedby="emailHelp" [(ngModel)]="disPercentage" name="disPercentage">
+                                                aria-describedby="emailHelp" [(ngModel)]="disAmount" name="disAmount">
                                         </div>
                                         <div class="form-group">
                                             <h6>Select Delivery Options</h6>
@@ -124,25 +124,6 @@
                                             <br />
                                             <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;"
                                                 [(ngModel)]="Description" name="Description">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
