--- a/src/app/components/products/add.product.html
+++ b/src/app/components/products/add.product.html
@@ -15,14 +15,13 @@
                             <div class="card-body">
                                 <h4 class="card-title">Add Product </h4>
                                 <a routerLink="/prducts" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
-                                <form class="cmxform" id="signupForm" method="get" action="#" #myForm="ngForm"
-                                    novalidate>
+                                <form class="cmxform" id="signupForm" method="get" action="#" #myForm="ngForm" novalidate>
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="firstname">Category :</label>
                                             <div class="form-group">
-                                                <select required class="form-control border-primary" id="exampleSelectPrimary"
-                                                    [(ngModel)]="categoryName" name="categoryName" (change)="changeCat($event.target.value)">
+                                                <select required class="form-control border-primary" id="exampleSelectPrimary" [(ngModel)]="categoryName" name="categoryName"
+                                                    (change)="changeCat($event.target.value)">
                                                     <option hidden>Select Category</option>
                                                     <option *ngFor="let cat of category" value="{{cat.name}}">{{cat.name}}</option>
                                                 </select>
@@ -31,8 +30,7 @@
                                         <div class="form-group">
                                             <label for="firstname">Sub Category :</label>
                                             <div class="form-group">
-                                                <select class="form-control border-primary" id="exampleSelectPrimary"
-                                                    [(ngModel)]="subCatName" name="subCatName" (change)="changeSubCat($event.target.value)">
+                                                <select class="form-control border-primary" id="exampleSelectPrimary" [(ngModel)]="subCatName" name="subCatName" (change)="changeSubCat($event.target.value)">
                                                     <!-- <option value=" " disabled selected hidden>select Sub category</option> -->
                                                     <option *ngFor="let subCat of subCategoryName" value="{{subCat.sub_cat}}">{{subCat.sub_cat}}</option>
                                                 </select>
@@ -40,19 +38,17 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname" name="prodName">Product Name :</label>
-                                            <input id="category" class="form-control" name="category" type="text"
-                                                [(ngModel)]="proName" />
+                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="proName" />
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname" name="prodName">Product Images :</label>
-                                            <input class="form-control" type='file' (change)="onSelectFile($event)"
-                                                multiple><br />
+                                            <input class="form-control" type='file' (change)="onSelectFile($event)" multiple><br
+                                            />
 
                                             <div *ngIf="!removeImg">
                                                 <img *ngFor='let url of urls' [src]="url" height="200" style="margin-right: 2%;border: 1px solid;margin-bottom:5%">
                                                 <div *ngFor='let url of productDetails'>
-                                                    <img *ngFor="let imgUrl of url.myImages;let i =index" [src]="imgUrl.product_image"
-                                                        height="200" style="margin-right: 2%;border: 1px solid;margin-bottom:5%"
+                                                    <img *ngFor="let imgUrl of url.myImages;let i =index" [src]="imgUrl.product_image" height="200" style="margin-right: 2%;border: 1px solid;margin-bottom:5%"
                                                         (click)="updateImage(imgUrl.id)" [ngClass]="{'selected':selectedImage==imgUrl.id}">
                                                 </div>
                                             </div>
@@ -64,8 +60,7 @@
                                         <div class="" *ngIf="removeImg">
                                             <img *ngFor='let url of urls' [src]="url" height="200" style="margin-right: 2%;border: 1px solid;margin-bottom:5%">
                                             <div *ngFor='let url of productDetails'>
-                                                <img *ngFor="let imgUrl of url.myImages;let i =index" [src]="imgUrl.product_image"
-                                                    height="200" style="margin-right: 2%;border: 1px solid;margin-bottom:5%"
+                                                <img *ngFor="let imgUrl of url.myImages;let i =index" [src]="imgUrl.product_image" height="200" style="margin-right: 2%;border: 1px solid;margin-bottom:5%"
                                                     (click)="DeleteImg(imgUrl.id)" [ngClass]="{'active':deleteImg==imgUrl.id}">
                                             </div>
                                         </div>
@@ -80,13 +75,11 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname" name="prodName">Actual Price :</label>
-                                            <input id="category" class="form-control" name="actual" type="text"
-                                                [(ngModel)]="actualPrice" />
+                                            <input id="category" class="form-control" name="actual" type="text" [(ngModel)]="actualPrice" />
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname" name="prodName">Selling Price :</label>
-                                            <input id="category" class="form-control" name="selling" type="text"
-                                                [(ngModel)]="sellingPrice" />
+                                            <input id="category" class="form-control" name="selling" type="text" [(ngModel)]="sellingPrice" />
                                         </div>
                                         <div class="form-group">
                                             <label for="sel1">Discount Type</label>
@@ -99,19 +92,17 @@
                                         </div>
                                         <div class="form-group" *ngIf="amount">
                                             <label for="exampleInputEmail1">Discount Amount</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                                aria-describedby="emailHelp" [(ngModel)]="disAmount" name="disAmount">
+                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="disAmount" name="disAmount">
                                         </div>
                                         <div class="form-group" *ngIf="percentage">
                                             <label for="exampleInputEmail1">Discount Percentage</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                                aria-describedby="emailHelp" [(ngModel)]="disAmount" name="disAmount">
+                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="disAmount" name="disAmount">
                                         </div>
                                         <div class="form-group">
                                             <h6>Select Delivery Options</h6>
                                             <div class="margin" *ngFor="let item of list">
-                                                <label class="checkbox-inline"><input type="checkbox" name="item"
-                                                        [(ngModel)]="item.checked" [value]="item.checked" (click)="checkbox($event.target.checked,item.id,item)"
+                                                <label class="checkbox-inline"><input type="checkbox" name="item" [(ngModel)]="item.checked"
+                                                        [value]="item.checked" (click)="checkbox($event.target.checked,item.id,item)"
                                                         id="item.id">{{item.title}}</label>
                                             </div>
                                         </div>
@@ -122,76 +113,35 @@
                                         <div class="form-group">
                                             <label for="firstname">Product Details :</label>
                                             <br />
-                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;"
-                                                [(ngModel)]="Description" name="Description">
-
-
-
-
-
-
-
+                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="Description" name="Description">
                                         </textarea>
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Specifications : </label>
                                             <br />
-                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;"
-                                                [(ngModel)]="specification" name="specification">
-
-
-
-
-
-
-
-                                        </textarea>
+                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="specification" name="specification">
+                                       </textarea>
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Terms & Conditions</label>
                                             <br />
-                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;"
-                                                [(ngModel)]="terms" name="terms">
-
-
-
-
-
-
-
+                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="terms" name="terms">
                                        </textarea>
                                         </div>
                                         <div class="form-group">
                                             <h6 for="firstname">FAQs : </h6>
                                             <label for="firstname">Question</label>
-                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;"
-                                                [(ngModel)]="faq" name="faq">
-
-
-
-
-
-
-
+                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="faq" name="faq">
                                         </textarea>
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Answer</label>
-                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;"
-                                                [(ngModel)]="answer" name="answer">
-
-
-
-
-
-
-
+                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="answer" name="answer">
                                         </textarea>
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Manufacture Name</label>
-                                            <input id="category" class="form-control" name="category" type="text"
-                                                [(ngModel)]="Manufacture" name="Manufacture" />
+                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="Manufacture" name="Manufacture" />
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Add sku:
@@ -201,8 +151,8 @@
                                         <div class="form-inline" *ngFor="let skuValues of skusData;let i= index">
                                             <div class="form-group">
 
-                                                <input id="category" class="form-control" type="text" placeholder="Size"
-                                                    [(ngModel)]="skuValues.size" [ngModelOptions]="{standalone:true}" />
+                                                <input id="category" class="form-control" type="text" placeholder="Size" [(ngModel)]="skuValues.size" [ngModelOptions]="{standalone:true}"
+                                                />
                                             </div>
                                             <div class="form-group">
                                                 <input id="category" class="form-control" onkeypress="return (event.charCode == 8 || event.charCode == 0) ? null : event.charCode >= 48 && event.charCode <= 57"
@@ -213,30 +163,29 @@
                                             </div>
                                             <div class="form-group">
 
-                                                <input id="category" class="form-control" type="text" placeholder="Actual Price"
-                                                    [(ngModel)]="skuValues.mrp" [ngModelOptions]="{standalone:true}" />
+                                                <input id="category" class="form-control" type="text" placeholder="Actual Price" [(ngModel)]="skuValues.mrp" [ngModelOptions]="{standalone:true}"
+                                                />
                                             </div>
                                             <div class="form-group">
 
-                                                <input id="category" class="form-control" type="text" placeholder="Offer Price"
-                                                    [(ngModel)]="skuValues.offer" [ngModelOptions]="{standalone:true}" />
+                                                <input id="category" class="form-control" type="text" placeholder="Offer Price" [(ngModel)]="skuValues.offer" [ngModelOptions]="{standalone:true}"
+                                                />
                                             </div>
                                             <div class="form-group">
 
-                                                <input id="category" class="form-control" type="text" placeholder="Selling Price"
-                                                    [(ngModel)]="skuValues.sellingPrice" [ngModelOptions]="{standalone:true}" />
+                                                <input id="category" class="form-control" type="text" placeholder="Selling Price" [(ngModel)]="skuValues.sellingPrice" [ngModelOptions]="{standalone:true}"
+                                                />
                                             </div>
                                             <div class="form-group">
 
                                                 <input id="category" class="form-control" onkeypress="return (event.charCode == 8 || event.charCode == 0) ? null : event.charCode >= 48 && event.charCode <= 57"
-                                                    type="text" placeholder="Stock" min='0' max='20' type="number"
-                                                    [(ngModel)]="skuValues.stock" [ngModelOptions]="{standalone:true}" />
+                                                    type="text" placeholder="Stock" min='0' max='20' type="number" [(ngModel)]="skuValues.stock"
+                                                    [ngModelOptions]="{standalone:true}" />
                                             </div>
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1">Sku Images : </label>
                                                 <!-- <input class="form-control" type="file" accept="image/*" (change)="changeListener($event,i)"> -->
-                                                <input class="form-control" type='file' accept="img1/*" (change)="onSelectFile1($event,i)"
-                                                    multiple>
+                                                <input class="form-control" type='file' accept="img1/*" (change)="onSelectFile1($event,i)" multiple>
                                                 <!-- <div *ngIf="image">
                                                     <h4>Image:</h4>
                                                     <img src="{{skuValues.image}}" alt="" width="200" height="200">
@@ -294,12 +243,10 @@
                                         <mat-datepicker #picker></mat-datepicker>
                                     </mat-form-field>                                                   -->
                                         <br />
-                                        <button type="submit" class="btn btn-primary vendor-button" (click)="insertProduct()"
-                                            *ngIf="addProd">Add
+                                        <button type="submit" class="btn btn-primary vendor-button" (click)="insertProduct()" *ngIf="addProd">Add
                                             Product
                                         </button>
-                                        <button type="submit" class="btn btn-primary vendor-button" (click)="updateProduct()"
-                                            *ngIf="!addProd">Update
+                                        <button type="submit" class="btn btn-primary vendor-button" (click)="updateProduct()" *ngIf="!addProd">Update
                                             Product
                                         </button>
                                     </fieldset>
