--- a/src/app/components/location/location.component.html
+++ b/src/app/components/location/location.component.html
@@ -1,74 +1,59 @@
 <div class="container-scroller">
-  <!-- partial:partials/_navbar.html -->
+    <!-- partial:partials/_navbar.html -->
 
-  <logo-nav></logo-nav>
-  <!-- partial -->
-  <div class="container-fluid page-body-wrapper">
-    <div class="row row-offcanvas row-offcanvas-right">
-      <!-- partial:partials/_settings-panel.html -->
-      <header-nav></header-nav>
-      <profile-nav></profile-nav>
-      <div class="content-wrapper">
-        <div class="card">
-          <div class="card-body">
-            <!-- <a href="" id="show" class="btn  btn-maron" style="float: right">Export To Excel</a> -->
-            <!-- <a routerLink="/addDelivery" id="show" class="btn  btn-maron" style="float: right">Add Delivery
-          Boy</a> -->
-            <h4 class="card-title">
-              Location Management </h4>
-            <br />
-            <div class="row">
-              <div class="col-12">
-                <div>
-                  <!-- <form #userlogin="ngForm" (ngSubmit)="onClickSubmit(userlogin.value)">
-                    <input type="text" name="emailid" placeholder="emailid" ngModel>
-                    <br />
-                    <input type="password" name="passwd" placeholder="passwd" ngModel>
-                    <br />
-                    <input type="submit" value="submit">
-                  </form> -->
-                  <form>
-                    <div class="form-group mb-3">
-                      <label for="inputState">Select country</label>
-                      <select id="inputState" class="form-control" (change)="changeCountry($event.target.value)">
-                        <option selected>Choose...</option>
-                        <option value="IND">India</option>
-                        <option value="UAE">UAE</option>
-                      </select>
-                    </div>
+    <logo-nav></logo-nav>
+    <!-- partial -->
+    <div class="container-fluid page-body-wrapper">
+        <div class="row row-offcanvas row-offcanvas-right">
+            <!-- partial:partials/_settings-panel.html -->
+            <header-nav></header-nav>
+            <profile-nav></profile-nav>
+            <!-- partial -->
+            <!-- partial:partials/_sidebar.html -->
 
-                    <!-- <div class="form-group mb-3">
-                      <label for="inputState">Select Location</label>
-                      <select id="inputState" class="form-control" [(ngModel)]="formData.lId" name="lId" (change)="changeLocation($event.target.value)">
-                        <option selected value=''>Choose...</option>
-                        <option *ngFor="let data of locationData" value="{{data.id}}">
-                          {{data.location_name}}
-                        </option>
-                      </select>
+            <!-- partial -->
+            <div class="content-wrapper">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-8">
+                                    <form>
+                                        <p>I am autocomplete bug</p>
+                                        <div class="form-group">
+                                            <input placeholder="Select Address" type="text">
+                                        </div>
+                                        <div class="form-group">
+                                            <ng-select class="form-control" [items]="countries" bindLabel="name" placeholder="Select Country"></ng-select>
+                                        </div>
+                                        <div class="form-group">
+                                            <ng-select class="form-control" [items]="states" bindLabel="name" placeholder="Select State"></ng-select>
+                                        </div>
+                                        <div class="form-group">
+                                            <ng-select class="form-control" [items]="cities" bindLabel="name" placeholder="Select City"></ng-select>
+                                        </div>
+                                        <button type="submit">Submit</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="form-group mb-3">
-                      <label for="inputState">Pincode</label>
-                      <select id="inputState" class="form-control" [(ngModel)]="formData.pincode" name="pincode"
-                        (change)="changeSubLocation()">
-                        <option selected value=''>Choose...</option>
-                        <option *ngFor="let data of subLocationData" value="{{data.pincode}}">
-                          {{data.address}}
-                        </option>
-                      </select>
-                    </div> -->
-                    <div class="row justify-content-center ">
-                      <div class="col-8">
-                        <button type="submit" class="btn button submit-button" (click)="submitLocation(subLocationName,pincodeOfLocation)">Submit</button>
-                      </div>
-                    </div>
-                  </form>
                 </div>
-              </div>
             </div>
-          </div>
+            <!-- content-wrapper ends -->
+            <!-- partial:partials/_footer.html -->
+            <footer class="footer">
+                <div class="container-fluid clearfix">
+                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018
+                        <a routerLink="#">Dhukan </a>. All rights reserved. </span>
+                    <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">
+
+                    </span>
+                </div>
+            </footer>
+            <!-- partial -->
         </div>
-      </div>
+        <!-- row-offcanvas ends -->
     </div>
-  </div>
+    <!-- page-body-wrapper ends -->
 </div>
