--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -38,6 +38,12 @@
                 <span class="menu-title">Admin List</span>
             </a>
         </li>
+        <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
+            <a class="nav-link" routerLink="/offers">
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+                <span class="menu-title">Coupon Management</span>
+            </a>
+        </li>
         <li class="nav-item" [ngClass]="{'active':pageNav==='products' || pageNav==='addproducts'}">
             <a class="nav-link" routerLink="/prducts">
                 <i class="fa fa-product-hunt" aria-hidden="true"></i>
@@ -56,16 +62,22 @@
                 <span class="menu-title">Location Management</span>
             </a>
         </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
-            <a class="nav-link" routerLink="/offers">
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
-                <span class="menu-title">Coupon Management</span>
-            </a>
-        </li>
         <li class="nav-item" [ngClass]="{'active':pageNav==='delivery' || pageNav==='addDelivery'}">
             <a class="nav-link" routerLink="/delivery">
                 <i class="fa fa-truck" aria-hidden="true"></i>
                 <span class="menu-title">Delivery Handling</span>
+            </a>
+        </li>
+        <li class="nav-item" [ngClass]="{'active':pageNav==='slot' || pageNav==='addslot'}">
+            <a class="nav-link" routerLink="/slot">
+                <i class="fa fa-truck" aria-hidden="true"></i>
+                <span class="menu-title">Delivery Slot</span>
+            </a>
+        </li>
+        <li class="nav-item" [ngClass]="{'active':pageNav==='orders'}">
+            <a class="nav-link" routerLink="/orders">
+                <i class="icon-drawer menu-icon"></i>
+                <span class="menu-title">Orders </span>
             </a>
         </li>
         <li class="nav-item" [ngClass]="{'active':pageNav==='content' || pageNav==='addcontent'}">
@@ -87,13 +99,6 @@
                 <span class="menu-title">Wholesellers List </span>
             </a>
         </li> -->
-        <li class="nav-item" [ngClass]="{'active':pageNav==='orders'}">
-            <a class="nav-link" routerLink="/orders">
-                <i class="icon-drawer menu-icon"></i>
-                <span class="menu-title">Orders </span>
-            </a>
-        </li>
-
         <li class="nav-item">
             <a class="nav-link" routerLink="/">
                 <i class="icon-power menu-icon"></i>
