--- a/src/app/components/slot/add.slot.html
+++ b/src/app/components/slot/add.slot.html
@@ -22,29 +22,16 @@
                                 <form class="cmxform" id="signupForm" method="get" action="#">
                                     <fieldset>
                                         <div class="form-group">
-                                            <label for="firstname">Name</label>
+                                            <label for="firstname">Slot Name</label>
                                             <input id="category" class="form-control" name="category" type="text" [(ngModel)]="contact" />
                                         </div>
-                                        <div class="form-group">
-                                            <label for="firstname">Emai</label>
-                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="email" />
+                                        <div class="form-group date date-picker">
+                                            <label>Date: </label>
+                                            <my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="model" required></my-date-picker>
                                         </div>
                                         <div class="form-group">
-                                            <label for="firstname">Password</label>
+                                            <label for="firstname">Time</label>
                                             <input type="password" id="category" class="form-control" name="category" type="text" [(ngModel)]="password" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="firstname">Phone</label>
-                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="phone" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Id Proof</label>
-                                            <input class="form-control" type="file" accept="image/*" (change)="changeListener($event)">
-                                            <br>
-                                            <div *ngIf="image">
-                                                <h4>Image:</h4>
-                                                <img src="{{image}}" alt="" width="200" height="200">
-                                            </div>
                                         </div>
                                         <br>
                                         <button type="submit" *ngIf="!deliveryId" class="btn btn-primary vendor-button" (click)="addDelivory()">
