--- a/src/app/components/slot/add.slot.html
+++ b/src/app/components/slot/add.slot.html
@@ -23,18 +23,22 @@
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="firstname">Slot Name</label>
-                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="contact" />
+                                            <input id="category" class="form-control" name="slot" type="text" [(ngModel)]="slot" />
                                         </div>
                                         <div class="form-group date date-picker">
                                             <label>Date: </label>
                                             <my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="model" required></my-date-picker>
                                         </div>
                                         <div class="form-group">
-                                            <label for="firstname">Time</label>
-                                            <input type="password" id="category" class="form-control" name="category" type="text" [(ngModel)]="password" />
+                                            <label for="firstname">Start Time</label>
+                                            <input type="password" id="category" class="form-control" name="starttime" type="text" [(ngModel)]="starttime" />
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="firstname">End Time</label>
+                                            <input type="password" id="category" class="form-control" name="endtime" type="text" [(ngModel)]="endtime" />
                                         </div>
                                         <br>
-                                        <button type="submit" *ngIf="!deliveryId" class="btn btn-primary vendor-button" (click)="addDelivory()">
+                                        <button type="submit" *ngIf="!deliveryId" class="btn btn-primary vendor-button" (click)="addSlot()">
                                             Add
                                         </button>
                                         <button type="submit" *ngIf="deliveryId" class="btn btn-primary vendor-button" (click)="addDelivory()">
