--- a/src/app/components/categories/add.cat.css
+++ b/src/app/components/categories/add.cat.css
@@ -1,6 +1,6 @@
 .form-control{
     border-radius:5px;
-    border: 1px solid grey;
+    border: 1px solid #ddd;
 }
 .form-group label{
     font-size: 16px;
