--- a/src/app/components/content-management/content-management.component.css
+++ b/src/app/components/content-management/content-management.component.css
@@ -10,3 +10,9 @@ ul.content-data{
 li a:hover {
     color: black;
 }
+.form-control{
+    width: 400px;
+}
+.vendor-button{
+    background-color: #0d3d66;
+}
