--- a/src/app/components/location/add.location.html
+++ b/src/app/components/location/add.location.html
@@ -16,33 +16,31 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title text-center" (click)="addCat()">Add categories</h4>
-                                <a routerLink="/category" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
+                                <h4 class="card-title">Add Location</h4>
+                                <a routerLink="/location" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
                                 <form>
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1">Category Name</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="input" name="input">
+                                        <label for="exampleInputEmail1">Select Country</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="country" name="country">
                                     </div>
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1">Category Image</label>
-                                        <input class="form-control" type="file" accept="image/*" (change)="changeListener($event)">
-                                        <div *ngIf="image">
-                                            <h4>Image:</h4>
-                                            <img src="{{image}}" alt="" width="200" height="200">
-                                        </div>
+                                        <label for="exampleInputEmail1">Select State</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="state" name="state">
                                     </div>
                                     <div class="form-group">
-                                        <label for="firstname">Description :</label>
-                                        <br />
-                                        <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="textarea" name="textarea">
-                                                </textarea>
+                                        <label for="exampleInputEmail1">Select City</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="city" name="city">
                                     </div>
-                                    <button type="submit" class="btn btn-primary vendor-button" (click)="addCat(input)" *ngIf="addcat">Add
-                                        category
+                                    <div class="form-group">
+                                        <label for="exampleInputEmail1">Select Area</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="area" name="area">
+                                    </div>
+                                    <button type="submit" class="btn btn-primary vendor-button" (click)="addLocation()">Add
+                                        Location
                                     </button>
-                                    <button type="submit" class="btn btn-primary vendor-button" (click)="updateCat(input)" *ngIf="!addcat">Update
+                                    <!-- <button type="submit" class="btn btn-primary vendor-button"*ngIf="!addcat">Update
                                         category
-                                    </button>
+                                    </button> -->
                                 </form>
                             </div>
                         </div>
