--- a/src/app/components/location/location.component.css
+++ b/src/app/components/location/location.component.css
@@ -4,3 +4,21 @@
 .location{
     margin-bottom: 40px;
 }
+input[type=text] {
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-bottom: 20px;
+    font-size: 17px;
+    border: solid 1px #eaeaea;
+    border-radius: 5px;
+    width: 30%;
+  }
+  .fa-search{
+    position: absolute;
+    top: 14%;
+    left: 26%;
+  }
+  .form-control{
+      width: 400px;
+  }
