--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -1,109 +1,166 @@
-<nav class="sidebar sidebar-offcanvas">
-    <ul class="nav">
-        <li class="nav-item nav-profile" style="margin-bottom:20px;">
-            <div class="nav-link">
-                <!-- <div class="profile-image">
-          <img src="assets/images/faces/face10.jpg" alt="image" />
-          <span class="online-status online"></span>
-        </div> -->
-                <div class="profile-image">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img src="assets/images/user-logo1.png">
-                        </div>
-                        <div class="col-md-6">
-                            <h5>Michel</h5>
-                        </div>
-                    </div>
-                    <!-- <span> Michel</span> -->
-                </div>
-            </div>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='categorie' || pageNav=== 'addcategorie'}">
-            <a class="nav-link" routerLink="/category">
-                <i class="icon-layers menu-icon"></i>
-                <span class="menu-title">Categories </span>
-            </a>
-        </li>
+<div class="nav-side-menu">
+    <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+    <div class="menu-list">
+        <ul id="menu-content" class="menu-content collapse out">
+            <li class="nav-item" [ngClass]="{'active':pageNav==='categorie' || pageNav=== 'addcategorie'}">
+                <a class="nav-link" routerLink="/category">
+                    <i class="icon-layers menu-icon"></i>
+                    <span class="menu-title">Categories </span>
+                </a>
+            </li>
+            <!-- <li data-toggle="collapse" data-target="#products" class="collapsed active">
+                    <a><i class="fa fa-gift fa-lg"></i> Anlagenauswahl <span class="arrow"></span></a>
+                </li>
+                <ul class="sub-menu collapse" id="products">
+                    <li class="active"><a>RFT-H1</a></li>
+                    <li><a>RFT-H2</a></li>
+                    <li><a>BTB-H1</a></li>
+                    <li><a>BTB-H2</a></li>
+                </ul> -->
 
-        <li class="nav-item" [ngClass]="{'active':pageNav==='subcategorie' || pageNav==='addsubcategorie'}">
-            <a class="nav-link" routerLink="/subcategory">
-                <i class="fa fa-caret-square-o-right" aria-hidden="true"></i>
-                <span class="menu-title">Sub Categories </span>
-            </a>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
-            <a class="nav-link" routerLink="/vendors">
-                <i class="icon-people menu-icon"></i>
-                <span class="menu-title">Admin List</span>
-            </a>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
-            <a class="nav-link" routerLink="/offers">
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
-                <span class="menu-title">Coupon Management</span>
-            </a>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='products' || pageNav==='addproducts'}">
-            <a class="nav-link" routerLink="/prducts">
-                <i class="fa fa-product-hunt" aria-hidden="true"></i>
-                <span class="menu-title">Products </span>
-            </a>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='banner' || pageNav==='addbanner'}">
-            <a class="nav-link" routerLink="/banner">
-                <i class="fa fa-picture-o" aria-hidden="true"></i>
-                <span class="menu-title">Banners</span>
-            </a>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
-            <a class="nav-link" routerLink="/location">
-                <i class="fa fa-map-marker"></i>
-                <span class="menu-title">Location Management</span>
-            </a>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='delivery' || pageNav==='addDelivery'}">
-            <a class="nav-link" routerLink="/delivery">
-                <i class="fa fa-truck" aria-hidden="true"></i>
-                <span class="menu-title">Delivery Handling</span>
-            </a>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='slot' || pageNav==='addslot'}">
-            <a class="nav-link" routerLink="/slot">
-                <i class="fa fa-truck" aria-hidden="true"></i>
-                <span class="menu-title">Delivery Slot</span>
-            </a>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='orders'}">
-            <a class="nav-link" routerLink="/orders">
-                <i class="icon-drawer menu-icon"></i>
-                <span class="menu-title">Orders </span>
-            </a>
-        </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='content' || pageNav==='addcontent'}">
-            <a class="nav-link" routerLink="/addcontent">
-                <i class="fa fa-file-text"></i>
-                <span class="menu-title">Content Management</span>
-            </a>
-        </li>
-        <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='users' || pageNav==='addusers'}">
-            <a class="nav-link" routerLink="/users">
-                <i class="icon-people menu-icon"></i>
-                <span class="menu-title">Loyalty Management</span>
-            </a>
-        </li> -->
+            <li class="nav-item" [ngClass]="{'active':pageNav==='subcategorie' || pageNav==='addsubcategorie'}">
+                <a class="nav-link" routerLink="/subcategory">
+                    <i class="fa fa-caret-square-o-right" aria-hidden="true"></i>
+                    <span class="menu-title sub">Sub Categories </span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
+                <a class="nav-link" routerLink="/vendors">
+                    <i class="icon-people menu-icon"></i>
+                    <span class="menu-title">Admin List</span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
+                <a class="nav-link" routerLink="/offers">
+                    <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+                    <span class="menu-title sub">Coupon Management</span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='products' || pageNav==='addproducts'}">
+                <a class="nav-link" routerLink="/prducts">
+                    <i class="fa fa-product-hunt" aria-hidden="true"></i>
+                    <span class="menu-title sub">Products </span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='banner' || pageNav==='addbanner'}">
+                <a class="nav-link" routerLink="/banner">
+                    <i class="fa fa-picture-o" aria-hidden="true"></i>
+                    <span class="menu-title sub">Banners</span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
+                <a class="nav-link" routerLink="/location">
+                    <i class="fa fa-map-marker"></i>
+                    <span class="menu-title sub">Location Management</span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='delivery' || pageNav==='addDelivery'}">
+                <a class="nav-link" routerLink="/delivery">
+                    <i class="fa fa-truck" aria-hidden="true"></i>
+                    <span class="menu-title sub">Delivery Handling</span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='slot' || pageNav==='addslot'}">
+                <a class="nav-link" routerLink="/slot">
+                    <i class="fa fa-truck" aria-hidden="true"></i>
+                    <span class="menu-title sub">Delivery Slot</span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='orders'}">
+                <a class="nav-link" routerLink="/orders">
+                    <i class="icon-drawer menu-icon"></i>
+                    <span class="menu-title">Orders </span>
+                </a>
+            </li>
+            <!-- <li data-toggle="collapse" data-target="#products" class="nav-item collapsed active" [ngClass]="{'active':pageNav==='content' || pageNav==='addcontent'}">
+                <a class="nav-link" routerLink="/addcontent">
+                    <i class="fa fa-file-text"></i>Content Management
+                    <span class="menu-title sub arrow"></span>
+                </a>
+            </li> -->
+            <li data-toggle="collapse" data-target="#products" class="collapsed active" [ngClass]="{'active':pageNav==='content' || pageNav==='addcontent'}">
+                <a class="sub"><i class="fa fa-gift fa-lg"></i> <span class="sub"></span>Content Management <span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu collapse" id="products">
+                <li class="active" routerLink="/addcontent"><a>Terms & Conditions</a></li>
+                <li><a>About Us</a></li>
+                <li><a>Delivery Information</a></li>
+                <li><a>Privacy & Policy</a></li>
+                <li><a>Returns</a></li>
+            </ul>
+            <!-- <li data-toggle="collapse" data-target="#products" class="collapsed active">
+                <a><i class="fa fa-gift fa-lg"></i> Content Management <span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu collapse" id="products">
+                <li class="active" routerLink="/users"><a>RFT-H1</a></li>
+                <li><a>RFT-H2</a></li>
+                <li><a>BTB-H1</a></li>
+                <li><a>BTB-H2</a></li>
+            </ul> -->
+            <li class="nav-item" [ngClass]="{'active':pageNav==='users' || pageNav==='addusers'}">
+                <a class="nav-link" routerLink="/users">
+                    <i class="icon-people menu-icon"></i>
+                    <span class="menu-title">Loyalty Management</span>
+                </a>
+            </li>
 
-        <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='wholesellers' || pageNav==='addwholesellers'}">
-            <a class="nav-link" routerLink="/wholesellers">
-                <i class="icon-people menu-icon"></i>
-                <span class="menu-title">Wholesellers List </span>
-            </a>
-        </li> -->
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/">
-                <i class="icon-power menu-icon"></i>
-                <span class="menu-title">Logout </span>
-            </a>
-        </li>
-    </ul>
-</nav>
+            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='wholesellers' || pageNav==='addwholesellers'}">
+                    <a class="nav-link" routerLink="/wholesellers">
+                        <i class="icon-people menu-icon"></i>
+                        <span class="menu-title">Wholesellers List </span>
+                    </a>
+                </li> -->
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/">
+                    <i class="icon-power menu-icon"></i>
+                    <span class="menu-title">Logout </span>
+                </a>
+            </li>
+
+            <!-- <li data-toggle="collapse" data-target="#products" class="collapsed active">
+                <a><i class="fa fa-gift fa-lg"></i> Anlagenauswahl <span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu collapse" id="products">
+                <li class="active"><a>RFT-H1</a></li>
+                <li><a>RFT-H2</a></li>
+                <li><a>BTB-H1</a></li>
+                <li><a>BTB-H2</a></li>
+            </ul>
+
+
+            <li data-toggle="collapse" data-target="#service" class="collapsed">
+                <a><i class="fa fa-globe fa-lg"></i> Auswertungen <span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu collapse" id="service">
+                <li>Trendmonitoring</li>
+                <li>Alarmmonitoring</li>
+                <li>Audit-Trail</li>
+            </ul>
+
+
+            <li data-toggle="collapse" data-target="#new" class="collapsed">
+                <a><i class="fa fa-car fa-lg"></i> Reporting <span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu collapse" id="new">
+                <li>Alarmstatistik</li>
+                <li>Prozessfähigkeit</li>
+            </ul>
+
+
+            <li>
+                <a>
+                    <i class="fa fa-user fa-lg"></i> Profile
+                </a>
+            </li>
+
+            <li data-toggle="collapse" data-target="#new" class="collapsed">
+                <a><i class="fa fa-car fa-lg"></i> Service <span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu collapse" id="new">
+                <li>Sensorkonfiguration</li>
+                <li>Betriebsarten</li>
+            </ul> -->
+
+        </ul>
+    </div>
+</div>
